// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Cards/Card Complete Example 1`] = `
.c6 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: #FFF;
}

.c6 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: #FFF;
}

.c13 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  color: inherit;
}

.c13 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  color: inherit;
}

.c17 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
  margin: 0;
}

.c17 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 20px;
  width: 20px;
  -webkit-flex: 0 0 20px;
  -ms-flex: 0 0 20px;
  flex: 0 0 20px;
  color: #FFF;
}

.c4 > svg {
  height: 100%;
  width: 100%;
  color: white;
}

.c18 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 50px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  outline: none !important;
  white-space: nowrap;
  font-size: 16px;
  padding: 0px 32px;
  height: 40px;
  background-color: transparent;
  color: #6D6E70;
  border: 1px solid #6D6E70;
}

.c18:hover {
  background-color: #6D6E70;
  color: #FFF;
}

.c7 {
  text-transform: uppercase;
}

.c5 {
  margin-right: 9px;
}

.c3 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 50px;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0px 14px 0px 10px;
  height: 30px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E1523D;
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
  border: 1px solid #FFF;
}

.c8 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 50px;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0px 14px 0px 10px;
  height: 30px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F9942E;
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
  border: 1px solid #FFF;
}

.c15 {
  margin-top: 0;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 34px;
  text-transform: none;
  color: #6D6E70;
}

.c1 {
  overflow: hidden;
  border-bottom-left-radius: 40px;
  border-top-right-radius: 40px;
  position: relative;
  height: 450px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 0.5s ease-out;
  -webkit-transition: transform 0.5s ease-out;
  transition: transform 0.5s ease-out;
  width: 100%;
  height: 100%;
}

.c0 {
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: all 0.5s ease-out;
  transition: all 0.5s ease-out;
  height: 100%;
}

.c0:hover .c9 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c2 {
  position: absolute;
  z-index: 1;
  top: 20px;
  left: 20px;
  right: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 > * {
  margin-bottom: 10px;
}

.c2 > *:not(:last-child) {
  margin-right: 10px;
}

.c16 {
  margin-top: 14px;
  font-size: 32px;
  text-transform: none;
  margin-bottom: 0px;
}

.c14 {
  font-style: italic;
  margin-top: 33px;
}

.c12 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c11 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c17 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c17 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c15 {
    font-size: 25px;
  }
}

@media screen and (max-width:767px) {
  .c1 {
    height: 400px;
  }
}

<div
  style={
    Object {
      "maxWidth": 500,
    }
  }
>
  <div
    className="c0"
    direction="vertical"
  >
    <div
      className="c1"
      direction="vertical"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
          color="stone"
        >
          <span
            className="c4 c5"
            color="white"
            size="xs"
          >
            <svg
              viewBox="0 0 50 50"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22.972 2.66 2.422 17.59a3.45 3.45 0 0 0-1.253 3.856l7.85 24.158a3.449 3.449 0 0 0 3.28 2.384h25.402a3.45 3.45 0 0 0 3.28-2.384l7.85-24.158a3.45 3.45 0 0 0-1.253-3.856L27.028 2.66a3.448 3.448 0 0 0-4.056 0"
                fill="currentColor"
                fillRule="evenodd"
              />
            </svg>
          </span>
          <span
            className="c6 c7"
            color="light"
            size="sm"
          >
            Stone
          </span>
        </div>
        <div
          className="c8"
          color="wood"
        >
          <span
            className="c4 c5"
            color="white"
            size="xs"
          >
            <svg
              viewBox="0 0 50 50"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m22.379 5.517-20.97 36.41c-1.164 2.022.292 4.55 2.622 4.55h41.938c2.33 0 3.786-2.528 2.621-4.55L27.621 5.517c-1.165-2.023-4.077-2.023-5.242 0"
                fill="currentColor"
                fillRule="evenodd"
              />
            </svg>
          </span>
          <span
            className="c6 c7"
            color="light"
            size="sm"
          >
            Wood
          </span>
        </div>
      </div>
      <div
        className="c9 c10"
      >
        <div
          style={
            Object {
              "background": "url(\\"https://dummyimage.com/1920x1080/ccc/fff.png\\") center center",
              "backgroundSize": "cover",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </div>
    </div>
    <div
      className="c11"
      direction="vertical"
    >
      <div
        className="c12"
      >
        <span
          className="c13 c14"
          size="sm"
        >
          01 gennaio 2023, Location
        </span>
        <h4
          className="c15 c16"
          color="primary"
        >
          Example card
        </h4>
        <div
          style={
            Object {
              "marginTop": "20px",
            }
          }
        >
          <p
            className="c17"
          >
            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.
          </p>
        </div>
      </div>
      <div
        style={
          Object {
            "marginTop": "20px",
          }
        }
      >
        <button
          className="c18"
          data-testid="action-button"
          type="button"
        >
          Action
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Cards/Card Default 1`] = `
.c8 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
  margin: 0;
}

.c8 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c6 {
  margin-top: 0;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 34px;
  text-transform: none;
  color: #6D6E70;
}

.c1 {
  overflow: hidden;
  border-bottom-left-radius: 40px;
  border-top-right-radius: 40px;
  position: relative;
  height: 450px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 0.5s ease-out;
  -webkit-transition: transform 0.5s ease-out;
  transition: transform 0.5s ease-out;
  width: 100%;
  height: 100%;
}

.c0 {
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: all 0.5s ease-out;
  transition: all 0.5s ease-out;
  height: 100%;
}

.c0:hover .c2 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c7 {
  margin-top: 29px;
  font-size: 32px;
  text-transform: none;
  margin-bottom: 0px;
}

.c5 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c8 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c8 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c6 {
    font-size: 25px;
  }
}

@media screen and (max-width:767px) {
  .c1 {
    height: 400px;
  }
}

<div
  style={
    Object {
      "maxWidth": 500,
    }
  }
>
  <div
    className="c0"
    direction="vertical"
  >
    <div
      className="c1"
      direction="vertical"
    >
      <div
        className="c2 c3"
      >
        <div
          style={
            Object {
              "background": "url(\\"https://dummyimage.com/1920x1080/ccc/fff.png\\") center center",
              "backgroundSize": "cover",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </div>
    </div>
    <div
      className="c4"
      direction="vertical"
    >
      <div
        className="c5"
      >
        <h4
          className="c6 c7"
          color="primary"
        >
          Example card
        </h4>
        <div
          style={
            Object {
              "marginTop": "20px",
            }
          }
        >
          <p
            className="c8"
          >
            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Cards/Card Horizontal 1`] = `
.c6 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: #FFF;
}

.c6 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: #FFF;
}

.c16 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
  margin: 0;
}

.c16 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 20px;
  width: 20px;
  -webkit-flex: 0 0 20px;
  -ms-flex: 0 0 20px;
  flex: 0 0 20px;
  color: #FFF;
}

.c4 > svg {
  height: 100%;
  width: 100%;
  color: white;
}

.c17 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 50px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  outline: none !important;
  white-space: nowrap;
  font-size: 16px;
  padding: 0px 32px;
  height: 40px;
  background-color: transparent;
  color: #6D6E70;
  border: 1px solid #6D6E70;
}

.c17:hover {
  background-color: #6D6E70;
  color: #FFF;
}

.c7 {
  text-transform: uppercase;
}

.c5 {
  margin-right: 9px;
}

.c3 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 50px;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0px 14px 0px 10px;
  height: 30px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E1523D;
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
  border: 1px solid #FFF;
}

.c8 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 50px;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0px 14px 0px 10px;
  height: 30px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F9942E;
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
  border: 1px solid #FFF;
}

.c14 {
  margin-top: 0;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 34px;
  text-transform: none;
  color: #6D6E70;
}

.c1 {
  overflow: hidden;
  border-bottom-left-radius: 40px;
  border-top-right-radius: 40px;
  position: relative;
  height: 450px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 0.5s ease-out;
  -webkit-transition: transform 0.5s ease-out;
  transition: transform 0.5s ease-out;
  width: 100%;
  height: 100%;
}

.c0 {
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: all 0.5s ease-out;
  transition: all 0.5s ease-out;
}

.c0:hover .c9 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c2 {
  position: absolute;
  z-index: 1;
  top: 20px;
  left: 20px;
  right: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 > * {
  margin-bottom: 10px;
}

.c2 > *:not(:last-child) {
  margin-right: 10px;
}

.c15 {
  margin-top: 29px;
  font-size: 32px;
  text-transform: none;
  margin-bottom: 0px;
}

.c13 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c11 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c16 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c16 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c14 {
    font-size: 25px;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    -webkit-flex: 1 1 calc(100% / 4 * 3);
    -ms-flex: 1 1 calc(100% / 4 * 3);
    flex: 1 1 calc(100% / 4 * 3);
  }
}

@media screen and (max-width:767px) {
  .c1 {
    height: 400px;
  }
}

@media screen and (min-width:992px) {
  .c0 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }
}

@media screen and (min-width:992px) {
  .c11 {
    -webkit-flex: 1 1 calc(100% / 4);
    -ms-flex: 1 1 calc(100% / 4);
    flex: 1 1 calc(100% / 4);
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
    margin-right: 20px;
  }

  .c11 .c12 {
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
  }
}

<div>
  <div
    className="c0"
    direction="horizontal"
  >
    <div
      className="c1"
      direction="horizontal"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
          color="stone"
        >
          <span
            className="c4 c5"
            color="white"
            size="xs"
          >
            <svg
              viewBox="0 0 50 50"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22.972 2.66 2.422 17.59a3.45 3.45 0 0 0-1.253 3.856l7.85 24.158a3.449 3.449 0 0 0 3.28 2.384h25.402a3.45 3.45 0 0 0 3.28-2.384l7.85-24.158a3.45 3.45 0 0 0-1.253-3.856L27.028 2.66a3.448 3.448 0 0 0-4.056 0"
                fill="currentColor"
                fillRule="evenodd"
              />
            </svg>
          </span>
          <span
            className="c6 c7"
            color="light"
            size="sm"
          >
            Stone
          </span>
        </div>
        <div
          className="c8"
          color="wood"
        >
          <span
            className="c4 c5"
            color="white"
            size="xs"
          >
            <svg
              viewBox="0 0 50 50"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m22.379 5.517-20.97 36.41c-1.164 2.022.292 4.55 2.622 4.55h41.938c2.33 0 3.786-2.528 2.621-4.55L27.621 5.517c-1.165-2.023-4.077-2.023-5.242 0"
                fill="currentColor"
                fillRule="evenodd"
              />
            </svg>
          </span>
          <span
            className="c6 c7"
            color="light"
            size="sm"
          >
            Wood
          </span>
        </div>
      </div>
      <div
        className="c9 c10"
      >
        <div
          style={
            Object {
              "background": "url(\\"https://dummyimage.com/1920x1080/ccc/fff.png\\") center center",
              "backgroundSize": "cover",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </div>
    </div>
    <div
      className="c11"
      direction="horizontal"
    >
      <div
        className="c12 c13"
      >
        <h4
          className="c14 c15"
          color="primary"
        >
          Example card
        </h4>
        <div
          style={
            Object {
              "marginTop": "20px",
            }
          }
        >
          <p
            className="c16"
          >
            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.
          </p>
        </div>
      </div>
      <div
        style={
          Object {
            "marginTop": "20px",
          }
        }
      >
        <button
          className="c17"
          data-testid="action-button"
          type="button"
        >
          Action
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Cards/Card With Button 1`] = `
.c8 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
  margin: 0;
}

.c8 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c9 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 50px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  outline: none !important;
  white-space: nowrap;
  font-size: 16px;
  padding: 0px 32px;
  height: 40px;
  background-color: transparent;
  color: #6D6E70;
  border: 1px solid #6D6E70;
}

.c9:hover {
  background-color: #6D6E70;
  color: #FFF;
}

.c6 {
  margin-top: 0;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 34px;
  text-transform: none;
  color: #6D6E70;
}

.c1 {
  overflow: hidden;
  border-bottom-left-radius: 40px;
  border-top-right-radius: 40px;
  position: relative;
  height: 450px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 0.5s ease-out;
  -webkit-transition: transform 0.5s ease-out;
  transition: transform 0.5s ease-out;
  width: 100%;
  height: 100%;
}

.c0 {
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: all 0.5s ease-out;
  transition: all 0.5s ease-out;
  height: 100%;
}

.c0:hover .c2 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c7 {
  margin-top: 29px;
  font-size: 32px;
  text-transform: none;
  margin-bottom: 0px;
}

.c5 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c8 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c8 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c6 {
    font-size: 25px;
  }
}

@media screen and (max-width:767px) {
  .c1 {
    height: 400px;
  }
}

<div
  style={
    Object {
      "maxWidth": 500,
    }
  }
>
  <div
    className="c0"
    direction="vertical"
  >
    <div
      className="c1"
      direction="vertical"
    >
      <div
        className="c2 c3"
      >
        <div
          style={
            Object {
              "background": "url(\\"https://dummyimage.com/1920x1080/ccc/fff.png\\") center center",
              "backgroundSize": "cover",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </div>
    </div>
    <div
      className="c4"
      direction="vertical"
    >
      <div
        className="c5"
      >
        <h4
          className="c6 c7"
          color="primary"
        >
          Example card
        </h4>
        <div
          style={
            Object {
              "marginTop": "20px",
            }
          }
        >
          <p
            className="c8"
          >
            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.
          </p>
        </div>
      </div>
      <div
        style={
          Object {
            "marginTop": "20px",
          }
        }
      >
        <button
          className="c9"
          data-testid="action-button"
          type="button"
        >
          Action
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Cards/Card With Ellipsis 1`] = `
.c8 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
  margin: 0;
}

.c8 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c6 {
  margin-top: 0;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 34px;
  text-transform: none;
  color: #6D6E70;
}

.c1 {
  overflow: hidden;
  border-bottom-left-radius: 40px;
  border-top-right-radius: 40px;
  position: relative;
  height: 450px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 0.5s ease-out;
  -webkit-transition: transform 0.5s ease-out;
  transition: transform 0.5s ease-out;
  width: 100%;
  height: 100%;
}

.c0 {
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: all 0.5s ease-out;
  transition: all 0.5s ease-out;
  height: 100%;
}

.c0:hover .c2 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c7 {
  margin-top: 29px;
  font-size: 32px;
  text-transform: none;
  margin-bottom: 0px;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c8 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c8 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c6 {
    font-size: 25px;
  }
}

@media screen and (max-width:767px) {
  .c1 {
    height: 400px;
  }
}

<div
  style={
    Object {
      "maxWidth": 500,
    }
  }
>
  <div
    className="c0"
    direction="vertical"
  >
    <div
      className="c1"
      direction="vertical"
    >
      <div
        className="c2 c3"
      >
        <div
          style={
            Object {
              "background": "url(\\"https://dummyimage.com/1920x1080/ccc/fff.png\\") center center",
              "backgroundSize": "cover",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </div>
    </div>
    <div
      className="c4"
      direction="vertical"
    >
      <div
        className="c5"
      >
        <h4
          className="c6 c7"
          color="primary"
        >
          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.
        </h4>
        <div
          style={
            Object {
              "marginTop": "20px",
            }
          }
        >
          <p
            className="c8"
          >
            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Cards/Card With Pre Title 1`] = `
.c6 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  color: inherit;
}

.c6 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  color: inherit;
}

.c10 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
  margin: 0;
}

.c10 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c8 {
  margin-top: 0;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 34px;
  text-transform: none;
  color: #6D6E70;
}

.c1 {
  overflow: hidden;
  border-bottom-left-radius: 40px;
  border-top-right-radius: 40px;
  position: relative;
  height: 450px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 0.5s ease-out;
  -webkit-transition: transform 0.5s ease-out;
  transition: transform 0.5s ease-out;
  width: 100%;
  height: 100%;
}

.c0 {
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: all 0.5s ease-out;
  transition: all 0.5s ease-out;
  height: 100%;
}

.c0:hover .c2 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c9 {
  margin-top: 14px;
  font-size: 32px;
  text-transform: none;
  margin-bottom: 0px;
}

.c7 {
  font-style: italic;
  margin-top: 33px;
}

.c5 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c10 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c10 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c8 {
    font-size: 25px;
  }
}

@media screen and (max-width:767px) {
  .c1 {
    height: 400px;
  }
}

<div
  style={
    Object {
      "maxWidth": 500,
    }
  }
>
  <div
    className="c0"
    direction="vertical"
  >
    <div
      className="c1"
      direction="vertical"
    >
      <div
        className="c2 c3"
      >
        <div
          style={
            Object {
              "background": "url(\\"https://dummyimage.com/1920x1080/ccc/fff.png\\") center center",
              "backgroundSize": "cover",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </div>
    </div>
    <div
      className="c4"
      direction="vertical"
    >
      <div
        className="c5"
      >
        <span
          className="c6 c7"
          size="sm"
        >
          01 gennaio 2023, Location
        </span>
        <h4
          className="c8 c9"
          color="primary"
        >
          Example card
        </h4>
        <div
          style={
            Object {
              "marginTop": "20px",
            }
          }
        >
          <p
            className="c10"
          >
            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Cards/Card With Tags 1`] = `
.c6 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: #FFF;
}

.c6 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: #FFF;
}

.c15 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
  margin: 0;
}

.c15 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 20px;
  width: 20px;
  -webkit-flex: 0 0 20px;
  -ms-flex: 0 0 20px;
  flex: 0 0 20px;
  color: #FFF;
}

.c4 > svg {
  height: 100%;
  width: 100%;
  color: white;
}

.c7 {
  text-transform: uppercase;
}

.c5 {
  margin-right: 9px;
}

.c3 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 50px;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0px 14px 0px 10px;
  height: 30px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E1523D;
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
  border: 1px solid #FFF;
}

.c8 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 50px;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0px 14px 0px 10px;
  height: 30px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F9942E;
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
  border: 1px solid #FFF;
}

.c13 {
  margin-top: 0;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 34px;
  text-transform: none;
  color: #6D6E70;
}

.c1 {
  overflow: hidden;
  border-bottom-left-radius: 40px;
  border-top-right-radius: 40px;
  position: relative;
  height: 450px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 0.5s ease-out;
  -webkit-transition: transform 0.5s ease-out;
  transition: transform 0.5s ease-out;
  width: 100%;
  height: 100%;
}

.c0 {
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: all 0.5s ease-out;
  transition: all 0.5s ease-out;
  height: 100%;
}

.c0:hover .c9 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c2 {
  position: absolute;
  z-index: 1;
  top: 20px;
  left: 20px;
  right: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 > * {
  margin-bottom: 10px;
}

.c2 > *:not(:last-child) {
  margin-right: 10px;
}

.c14 {
  margin-top: 29px;
  font-size: 32px;
  text-transform: none;
  margin-bottom: 0px;
}

.c12 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c11 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c15 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c15 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c13 {
    font-size: 25px;
  }
}

@media screen and (max-width:767px) {
  .c1 {
    height: 400px;
  }
}

<div
  style={
    Object {
      "maxWidth": 500,
    }
  }
>
  <div
    className="c0"
    direction="vertical"
  >
    <div
      className="c1"
      direction="vertical"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
          color="stone"
        >
          <span
            className="c4 c5"
            color="white"
            size="xs"
          >
            <svg
              viewBox="0 0 50 50"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22.972 2.66 2.422 17.59a3.45 3.45 0 0 0-1.253 3.856l7.85 24.158a3.449 3.449 0 0 0 3.28 2.384h25.402a3.45 3.45 0 0 0 3.28-2.384l7.85-24.158a3.45 3.45 0 0 0-1.253-3.856L27.028 2.66a3.448 3.448 0 0 0-4.056 0"
                fill="currentColor"
                fillRule="evenodd"
              />
            </svg>
          </span>
          <span
            className="c6 c7"
            color="light"
            size="sm"
          >
            Stone
          </span>
        </div>
        <div
          className="c8"
          color="wood"
        >
          <span
            className="c4 c5"
            color="white"
            size="xs"
          >
            <svg
              viewBox="0 0 50 50"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m22.379 5.517-20.97 36.41c-1.164 2.022.292 4.55 2.622 4.55h41.938c2.33 0 3.786-2.528 2.621-4.55L27.621 5.517c-1.165-2.023-4.077-2.023-5.242 0"
                fill="currentColor"
                fillRule="evenodd"
              />
            </svg>
          </span>
          <span
            className="c6 c7"
            color="light"
            size="sm"
          >
            Wood
          </span>
        </div>
      </div>
      <div
        className="c9 c10"
      >
        <div
          style={
            Object {
              "background": "url(\\"https://dummyimage.com/1920x1080/ccc/fff.png\\") center center",
              "backgroundSize": "cover",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </div>
    </div>
    <div
      className="c11"
      direction="vertical"
    >
      <div
        className="c12"
      >
        <h4
          className="c13 c14"
          color="primary"
        >
          Example card
        </h4>
        <div
          style={
            Object {
              "marginTop": "20px",
            }
          }
        >
          <p
            className="c15"
          >
            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
